<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="100dp"
    tools:context=".activities.AuthorizationActivity">

    <Button
        android:id="@+id/goToFirstActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_activity"
        android:textAllCaps="true" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/goToSecondActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_activity"
        android:textAllCaps="true" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/goToThirdActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/third_activity"
        android:textAllCaps="true" />

</LinearLayout>